@@ -2,6 +2,7 @@
 -----
 * [**] The comments are now displayed using the same styles across the app and with better support for rich comments, especially for P2 sites [#24055]
 * [**] The comment composer now opens fullscreen, shows previews of the comment you are replying to, supports savings drafts, and clearly communicates the upload state and errors [#24075]
+* [*] Add depth indicators for comment threads to make them easier to follow [#24117]
 * [*] Enable dismissing the virtual keyboard in the experimental editor [#23988]
 * [*] Remove Submit Feedback form from the Me menu [#24020]
 * [*] Fix unselectable group blocks in the experimental editor [https://github.com/wordpress-mobile/GutenbergKit/pull/68]
